--- a/Artemis.vcxproj
+++ b/Artemis.vcxproj
@@ -22,6 +22,11 @@
     <ClCompile Include="src\Direct X\SwapChain.cpp" />
     <ClCompile Include="src\Direct X\Texture2D.cpp" />
     <ClCompile Include="src\Engine\Application.cpp" />
+    <ClCompile Include="src\Engine\Math\DoubleVector3.cpp" />
+    <ClCompile Include="src\Engine\Math\FloatVector3.cpp" />
+    <ClCompile Include="src\Engine\Math\MatrixBase.cpp" />
+    <ClCompile Include="src\Engine\Math\Vector3Base.cpp" />
+    <ClCompile Include="src\Engine\Math\VectorBase.cpp" />
     <ClCompile Include="src\Exceptions\Exception.cpp" />
     <ClCompile Include="src\Debug\Output.cpp" />
     <ClCompile Include="src\Input\Input.cpp" />
@@ -42,7 +47,14 @@
     <ClInclude Include="src\Direct X\SwapChain.h" />
     <ClInclude Include="src\Direct X\Texture2D.h" />
     <ClInclude Include="src\Engine\Application.h" />
+    <ClInclude Include="src\Engine\Math\DoubleVector3.h" />
+    <ClInclude Include="src\Engine\Math\FloatVector3.h" />
+    <ClInclude Include="src\Engine\Math\MatrixBase.h" />
+    <ClInclude Include="src\Engine\Math\Vector3Base.h" />
+    <ClInclude Include="src\Engine\Math\VectorBase.h" />
+    <ClInclude Include="src\Engine\Vector3.h" />
     <ClInclude Include="src\Exceptions\DirectXException.h" />
+    <ClInclude Include="src\Exceptions\DivideByZeroException.h" />
     <ClInclude Include="src\Exceptions\Exceptions.h" />
     <ClInclude Include="src\Debug\Output.h" />
     <ClInclude Include="src\Exceptions\InvalidArgumentException.h" />
@@ -97,13 +109,17 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(ProjectDir)/src</IncludePath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>/</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <AdditionalDependencies>Dbghelp.lib;d3d11.lib;d3dcompiler.lib;dxguid.lib;winmm.lib;comctl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
