--- a/Artemis.vcxproj.filters
+++ b/Artemis.vcxproj.filters
@@ -1,231 +1,193 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
+    <Filter Include="Source">
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;hm;inl;inc;ipp;xsd</Extensions>
     </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
-    <Filter Include="Source Files\Main">
-      <UniqueIdentifier>{ed832a20-69f4-4acd-9ed7-a503e195276c}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Structs">
-      <UniqueIdentifier>{cc3e728b-6a65-4518-bbcc-3aeb2f93843e}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Windows">
-      <UniqueIdentifier>{28579a2c-078c-456a-a75f-b3f99c4e4a35}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Time">
-      <UniqueIdentifier>{5c040279-a11b-41d2-917b-c7d8ccddf2d1}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Debug">
-      <UniqueIdentifier>{5f7107ea-da8f-4f51-82f3-7fad79521a57}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Input">
-      <UniqueIdentifier>{453286df-f9bf-4d07-a1da-3e7d5994c7ad}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Exceptions">
-      <UniqueIdentifier>{bb5e5eef-bf52-4bc2-bcf0-af5d17c82bf0}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\Debug">
+    <Filter Include="Source\Debug">
       <UniqueIdentifier>{b4a79ae2-97b5-43bd-a594-c05387e7aeb1}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\Direct X">
+    <Filter Include="Source\Direct X">
       <UniqueIdentifier>{657826ab-3777-4e81-96c5-0caa1489112e}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\Exceptions">
+    <Filter Include="Source\Exceptions">
       <UniqueIdentifier>{96b84590-a0ba-448c-b4af-0526eca9a8d6}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\Input">
+    <Filter Include="Source\Input">
       <UniqueIdentifier>{8887c819-097a-4991-8836-ab9e694e1b7a}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\Main">
+    <Filter Include="Source\Main">
       <UniqueIdentifier>{8d2395a6-8bb2-4485-8119-4c34eb409d7e}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\Structs">
+    <Filter Include="Source\Structs">
       <UniqueIdentifier>{3f1dd9c7-b334-4cc7-8022-a0bb80e69b03}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\Time">
+    <Filter Include="Source\Time">
       <UniqueIdentifier>{e4519f01-f823-4219-a653-8db5b42fe614}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\Windows">
+    <Filter Include="Source\Windows">
       <UniqueIdentifier>{cdb7640c-c433-463b-96c8-4f069b1325e5}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\Direct X">
-      <UniqueIdentifier>{74e1c7d7-6ea1-4733-8c03-49b0175a0d03}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\Engine">
+    <Filter Include="Source\Engine">
       <UniqueIdentifier>{ed6fcd54-13f0-4612-b8ef-64df588db309}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\Engine">
-      <UniqueIdentifier>{805af0f7-1e85-43e7-9cc5-354c33c6d37f}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\Engine\Math">
+    <Filter Include="Source\Engine\Math">
       <UniqueIdentifier>{3b9dd28f-0960-441f-9e02-079e24d37a52}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Engine\Math">
-      <UniqueIdentifier>{dcbd9b87-8262-4353-84b2-701971f96e49}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Main\main.cpp">
-      <Filter>Source Files\Main</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Structs\Color.cpp">
-      <Filter>Source Files\Structs</Filter>
-    </ClCompile>
     <ClCompile Include="src\Windows\GameWindow.cpp">
-      <Filter>Source Files\Windows</Filter>
+      <Filter>Source\Windows</Filter>
     </ClCompile>
     <ClCompile Include="src\Windows\Window.cpp">
-      <Filter>Source Files\Windows</Filter>
+      <Filter>Source\Windows</Filter>
     </ClCompile>
     <ClCompile Include="src\Windows\WindowProcedure.cpp">
-      <Filter>Source Files\Windows</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Main\ApplicationArguments.cpp">
-      <Filter>Source Files\Main</Filter>
+      <Filter>Source\Windows</Filter>
     </ClCompile>
     <ClCompile Include="src\Time\Time.cpp">
-      <Filter>Source Files\Time</Filter>
+      <Filter>Source\Time</Filter>
     </ClCompile>
-    <ClCompile Include="src\Debug\Output.cpp">
-      <Filter>Source Files\Debug</Filter>
+    <ClCompile Include="src\Structs\Color.cpp">
+      <Filter>Source\Structs</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Main\ApplicationArguments.cpp">
+      <Filter>Source\Main</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Main\main.cpp">
+      <Filter>Source\Main</Filter>
     </ClCompile>
     <ClCompile Include="src\Input\Input.cpp">
-      <Filter>Source Files\Input</Filter>
+      <Filter>Source\Input</Filter>
     </ClCompile>
     <ClCompile Include="src\Exceptions\Exception.cpp">
-      <Filter>Source Files\Exceptions</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Direct X\GraphicsDevice.cpp">
-      <Filter>Source Files\Direct X</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Direct X\SwapChain.cpp">
-      <Filter>Source Files\Direct X</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Direct X\RenderTargetView.cpp">
-      <Filter>Source Files\Direct X</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Direct X\Texture2D.cpp">
-      <Filter>Source Files\Direct X</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Direct X\GraphicsResource.cpp">
-      <Filter>Source Files\Direct X</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Direct X\DepthBuffer.cpp">
-      <Filter>Source Files\Direct X</Filter>
+      <Filter>Source\Exceptions</Filter>
     </ClCompile>
     <ClCompile Include="src\Engine\Application.cpp">
-      <Filter>Source Files\Engine</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Engine\Math\MatrixBase.cpp">
-      <Filter>Source Files\Engine\Math</Filter>
+      <Filter>Source\Engine</Filter>
     </ClCompile>
     <ClCompile Include="src\Engine\Math\VectorBase.cpp">
-      <Filter>Source Files\Engine\Math</Filter>
+      <Filter>Source\Engine\Math</Filter>
     </ClCompile>
     <ClCompile Include="src\Engine\Math\DoubleVector3.cpp">
-      <Filter>Source Files\Engine\Math</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Engine\Math\Vector3Base.cpp">
-      <Filter>Source Files\Engine\Math</Filter>
+      <Filter>Source\Engine\Math</Filter>
     </ClCompile>
     <ClCompile Include="src\Engine\Math\FloatVector3.cpp">
-      <Filter>Source Files\Engine\Math</Filter>
+      <Filter>Source\Engine\Math</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Engine\Math\MatrixBase.cpp">
+      <Filter>Source\Engine\Math</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Engine\Math\Vector3Base.cpp">
+      <Filter>Source\Engine\Math</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Direct X\Texture2D.cpp">
+      <Filter>Source\Direct X</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Direct X\DepthBuffer.cpp">
+      <Filter>Source\Direct X</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Direct X\GraphicsDevice.cpp">
+      <Filter>Source\Direct X</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Direct X\GraphicsResource.cpp">
+      <Filter>Source\Direct X</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Direct X\RenderTargetView.cpp">
+      <Filter>Source\Direct X</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Direct X\SwapChain.cpp">
+      <Filter>Source\Direct X</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Debug\Output.cpp">
+      <Filter>Source\Debug</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Structs\Color.h">
-      <Filter>Header Files\Structs</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Windows\Window.h">
-      <Filter>Header Files\Windows</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Windows\GameWindow.h">
-      <Filter>Header Files\Windows</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Windows\WindowProcedure.h">
-      <Filter>Header Files\Windows</Filter>
+      <Filter>Source\Structs</Filter>
     </ClInclude>
     <ClInclude Include="src\Main\ApplicationArguments.h">
-      <Filter>Header Files\Main</Filter>
+      <Filter>Source\Main</Filter>
     </ClInclude>
     <ClInclude Include="src\Time\Time.h">
-      <Filter>Header Files\Time</Filter>
+      <Filter>Source\Time</Filter>
     </ClInclude>
     <ClInclude Include="src\Debug\Output.h">
-      <Filter>Header Files\Debug</Filter>
+      <Filter>Source\Debug</Filter>
     </ClInclude>
     <ClInclude Include="src\Input\Input.h">
-      <Filter>Header Files\Input</Filter>
+      <Filter>Source\Input</Filter>
     </ClInclude>
     <ClInclude Include="src\Input\Key.h">
-      <Filter>Header Files\Input</Filter>
+      <Filter>Source\Input</Filter>
     </ClInclude>
     <ClInclude Include="src\Exceptions\Exceptions.h">
-      <Filter>Header Files\Exceptions</Filter>
+      <Filter>Source\Exceptions</Filter>
     </ClInclude>
     <ClInclude Include="src\Direct X\GraphicsDevice.h">
-      <Filter>Header Files\Direct X</Filter>
+      <Filter>Source\Direct X</Filter>
     </ClInclude>
     <ClInclude Include="src\Direct X\DirectXHelper.h">
-      <Filter>Header Files\Direct X</Filter>
+      <Filter>Source\Direct X</Filter>
     </ClInclude>
     <ClInclude Include="src\Direct X\SwapChain.h">
-      <Filter>Header Files\Direct X</Filter>
+      <Filter>Source\Direct X</Filter>
     </ClInclude>
     <ClInclude Include="src\Direct X\RenderTargetView.h">
-      <Filter>Header Files\Direct X</Filter>
+      <Filter>Source\Direct X</Filter>
     </ClInclude>
     <ClInclude Include="src\Direct X\Texture2D.h">
-      <Filter>Header Files\Direct X</Filter>
+      <Filter>Source\Direct X</Filter>
     </ClInclude>
     <ClInclude Include="src\Direct X\GraphicsResource.h">
-      <Filter>Header Files\Direct X</Filter>
+      <Filter>Source\Direct X</Filter>
     </ClInclude>
     <ClInclude Include="src\Exceptions\NullReferenceException.h">
-      <Filter>Header Files\Exceptions</Filter>
+      <Filter>Source\Exceptions</Filter>
     </ClInclude>
     <ClInclude Include="src\Direct X\DepthBuffer.h">
-      <Filter>Header Files\Direct X</Filter>
+      <Filter>Source\Direct X</Filter>
     </ClInclude>
     <ClInclude Include="src\Exceptions\DirectXException.h">
-      <Filter>Header Files\Exceptions</Filter>
+      <Filter>Source\Exceptions</Filter>
     </ClInclude>
     <ClInclude Include="src\Exceptions\InvalidArgumentException.h">
-      <Filter>Header Files\Direct X</Filter>
+      <Filter>Source\Direct X</Filter>
     </ClInclude>
     <ClInclude Include="src\Engine\Application.h">
-      <Filter>Header Files\Engine</Filter>
+      <Filter>Source\Engine</Filter>
     </ClInclude>
     <ClInclude Include="src\Engine\Math\MatrixBase.h">
-      <Filter>Header Files\Engine\Math</Filter>
+      <Filter>Source\Engine\Math</Filter>
     </ClInclude>
     <ClInclude Include="src\Engine\Math\VectorBase.h">
-      <Filter>Header Files\Engine\Math</Filter>
+      <Filter>Source\Engine\Math</Filter>
     </ClInclude>
     <ClInclude Include="src\Engine\Math\DoubleVector3.h">
-      <Filter>Header Files\Engine\Math</Filter>
+      <Filter>Source\Engine\Math</Filter>
     </ClInclude>
     <ClInclude Include="src\Engine\Math\FloatVector3.h">
-      <Filter>Header Files\Engine\Math</Filter>
+      <Filter>Source\Engine\Math</Filter>
     </ClInclude>
     <ClInclude Include="src\Engine\Vector3.h">
-      <Filter>Header Files\Engine</Filter>
+      <Filter>Source\Engine</Filter>
     </ClInclude>
     <ClInclude Include="src\Engine\Math\Vector3Base.h">
-      <Filter>Header Files\Engine\Math</Filter>
+      <Filter>Source\Engine\Math</Filter>
     </ClInclude>
     <ClInclude Include="src\Exceptions\DivideByZeroException.h">
-      <Filter>Header Files\Exceptions</Filter>
+      <Filter>Source\Exceptions</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Windows\GameWindow.h">
+      <Filter>Source\Windows</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Windows\Window.h">
+      <Filter>Source\Windows</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Windows\WindowProcedure.h">
+      <Filter>Source\Windows</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
