Added more vectors

--- a/Artemis.vcxproj
+++ b/Artemis.vcxproj
@@ -23,7 +23,9 @@
     <ClCompile Include="src\Direct X\Texture2D.cpp" />
     <ClCompile Include="src\Engine\Application.cpp" />
     <ClCompile Include="src\Engine\Math\MatrixBase.cpp" />
+    <ClCompile Include="src\Engine\Math\Vector2Base.cpp" />
     <ClCompile Include="src\Engine\Math\Vector3Base.cpp" />
+    <ClCompile Include="src\Engine\Math\Vector4Base.cpp" />
     <ClCompile Include="src\Engine\Math\VectorBase.cpp" />
     <ClCompile Include="src\Exceptions\Exception.cpp" />
     <ClCompile Include="src\Debug\Output.cpp" />
@@ -45,12 +47,18 @@
     <ClInclude Include="src\Direct X\SwapChain.h" />
     <ClInclude Include="src\Direct X\Texture2D.h" />
     <ClInclude Include="src\Engine\Application.h" />
+    <ClInclude Include="src\Engine\Math\DoubleVector2.h" />
     <ClInclude Include="src\Engine\Math\DoubleVector3.h" />
+    <ClInclude Include="src\Engine\Math\DoubleVector4.h" />
     <ClInclude Include="src\Engine\Math\FloatVector3.h" />
     <ClInclude Include="src\Engine\Math\MatrixBase.h" />
+    <ClInclude Include="src\Engine\Math\Vector2Base.h" />
     <ClInclude Include="src\Engine\Math\Vector3Base.h" />
+    <ClInclude Include="src\Engine\Math\Vector4Base.h" />
     <ClInclude Include="src\Engine\Math\VectorBase.h" />
+    <ClInclude Include="src\Engine\Vector2.h" />
     <ClInclude Include="src\Engine\Vector3.h" />
+    <ClInclude Include="src\Engine\Vector4.h" />
     <ClInclude Include="src\Exceptions\DirectXException.h" />
     <ClInclude Include="src\Exceptions\DivideByZeroException.h" />
     <ClInclude Include="src\Exceptions\Exceptions.h" />
