--- a/Artemis.vcxproj.filters
+++ b/Artemis.vcxproj.filters
@@ -97,6 +97,12 @@
     <ClCompile Include="src\Debug\Output.cpp">
       <Filter>Source\Debug</Filter>
     </ClCompile>
+    <ClCompile Include="src\Engine\Math\Vector2Base.cpp">
+      <Filter>Source\Engine\Math</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Engine\Math\Vector4Base.cpp">
+      <Filter>Source\Engine\Math</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Structs\Color.h">
@@ -182,6 +188,24 @@
     </ClInclude>
     <ClInclude Include="src\Windows\WindowProcedure.h">
       <Filter>Source\Windows</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Engine\Math\Vector2Base.h">
+      <Filter>Source\Engine\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Engine\Math\Vector4Base.h">
+      <Filter>Source\Engine\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Engine\Vector2.h">
+      <Filter>Source\Engine</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Engine\Math\DoubleVector2.h">
+      <Filter>Source\Engine\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Engine\Math\DoubleVector4.h">
+      <Filter>Source\Engine\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Engine\Vector4.h">
+      <Filter>Source\Engine</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
