Put vectors into their own namespace and folder

--- a/Artemis.vcxproj
+++ b/Artemis.vcxproj
@@ -23,10 +23,10 @@
     <ClCompile Include="src\Direct X\Texture2D.cpp" />
     <ClCompile Include="src\Engine\Application.cpp" />
     <ClCompile Include="src\Engine\Math\MatrixBase.cpp" />
-    <ClCompile Include="src\Engine\Math\Vector2Base.cpp" />
-    <ClCompile Include="src\Engine\Math\Vector3Base.cpp" />
-    <ClCompile Include="src\Engine\Math\Vector4Base.cpp" />
-    <ClCompile Include="src\Engine\Math\VectorBase.cpp" />
+    <ClCompile Include="src\Engine\Math\Vectors\Vector2Base.cpp" />
+    <ClCompile Include="src\Engine\Math\Vectors\Vector3Base.cpp" />
+    <ClCompile Include="src\Engine\Math\Vectors\Vector4Base.cpp" />
+    <ClCompile Include="src\Engine\Math\Vectors\VectorBase.cpp" />
     <ClCompile Include="src\Exceptions\Exception.cpp" />
     <ClCompile Include="src\Debug\Output.cpp" />
     <ClCompile Include="src\Input\Input.cpp" />
@@ -49,17 +49,17 @@
     <ClInclude Include="src\Engine\Application.h" />
     <ClInclude Include="src\Engine\IntVector2.h" />
     <ClInclude Include="src\Engine\IntVector3.h" />
-    <ClInclude Include="src\Engine\Math\DoubleVector2.h" />
-    <ClInclude Include="src\Engine\Math\DoubleVector3.h" />
-    <ClInclude Include="src\Engine\Math\DoubleVector4.h" />
-    <ClInclude Include="src\Engine\Math\FloatVector2.h" />
-    <ClInclude Include="src\Engine\Math\FloatVector3.h" />
-    <ClInclude Include="src\Engine\Math\FloatVector4.h" />
     <ClInclude Include="src\Engine\Math\MatrixBase.h" />
-    <ClInclude Include="src\Engine\Math\Vector2Base.h" />
-    <ClInclude Include="src\Engine\Math\Vector3Base.h" />
-    <ClInclude Include="src\Engine\Math\Vector4Base.h" />
-    <ClInclude Include="src\Engine\Math\VectorBase.h" />
+    <ClInclude Include="src\Engine\Math\Vectors\DoubleVector2.h" />
+    <ClInclude Include="src\Engine\Math\Vectors\DoubleVector3.h" />
+    <ClInclude Include="src\Engine\Math\Vectors\DoubleVector4.h" />
+    <ClInclude Include="src\Engine\Math\Vectors\FloatVector2.h" />
+    <ClInclude Include="src\Engine\Math\Vectors\FloatVector3.h" />
+    <ClInclude Include="src\Engine\Math\Vectors\FloatVector4.h" />
+    <ClInclude Include="src\Engine\Math\Vectors\Vector2Base.h" />
+    <ClInclude Include="src\Engine\Math\Vectors\Vector3Base.h" />
+    <ClInclude Include="src\Engine\Math\Vectors\Vector4Base.h" />
+    <ClInclude Include="src\Engine\Math\Vectors\VectorBase.h" />
     <ClInclude Include="src\Engine\Vector2.h" />
     <ClInclude Include="src\Engine\Vector3.h" />
     <ClInclude Include="src\Engine\Vector4.h" />
