--- a/Artemis.vcxproj.filters
+++ b/Artemis.vcxproj.filters
@@ -106,9 +106,6 @@
     <ClCompile Include="src\Engine\Math\Vectors\VectorBase.cpp">
       <Filter>Source\Engine\Math\Vectors</Filter>
     </ClCompile>
-    <ClCompile Include="src\Engine\Math\Matrices\MatrixBase.cpp">
-      <Filter>Source\Engine\Math\Matrices</Filter>
-    </ClCompile>
     <ClCompile Include="src\Engine\Math\Matrices\GenericMatrix.cpp">
       <Filter>Source\Engine\Math\Matrices</Filter>
     </ClCompile>
@@ -225,11 +222,11 @@
     <ClInclude Include="src\Engine\Math\Vectors\VectorBase.h">
       <Filter>Source\Engine\Math\Vectors</Filter>
     </ClInclude>
-    <ClInclude Include="src\Engine\Math\Matrices\MatrixBase.h">
-      <Filter>Source\Engine\Math\Matrices</Filter>
-    </ClInclude>
     <ClInclude Include="src\Engine\Math\Matrices\GenericMatrix.h">
       <Filter>Source\Engine\Math\Matrices</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Debug\IDebugStringReturner.h">
+      <Filter>Source\Debug</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
