--- a/Artemis.vcxproj
+++ b/Artemis.vcxproj
@@ -15,6 +15,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Debugging\Output.cpp" />
     <ClCompile Include="src\Direct X\DepthBuffer.cpp" />
     <ClCompile Include="src\Direct X\GraphicsDevice.cpp" />
     <ClCompile Include="src\Direct X\GraphicsResource.cpp" />
@@ -24,7 +25,6 @@
     <ClCompile Include="src\Engine\Application.cpp" />
     <ClCompile Include="src\Engine\Math\Matrices\GenericMatrix.cpp" />
     <ClCompile Include="src\Exceptions\Exception.cpp" />
-    <ClCompile Include="src\Debug\Output.cpp" />
     <ClCompile Include="src\Input\Input.cpp" />
     <ClCompile Include="src\Main\ApplicationArguments.cpp" />
     <ClCompile Include="src\Structs\Color.cpp" />
@@ -35,6 +35,7 @@
     <ClCompile Include="src\Windows\WindowProcedure.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Debugging\Output.h" />
     <ClInclude Include="src\Debug\IDebugStringReturner.h" />
     <ClInclude Include="src\Direct X\DepthBuffer.h" />
     <ClInclude Include="src\Direct X\DirectXHelper.h" />
@@ -64,7 +65,6 @@
     <ClInclude Include="src\Exceptions\DirectXException.h" />
     <ClInclude Include="src\Exceptions\DivideByZeroException.h" />
     <ClInclude Include="src\Exceptions\Exception.h" />
-    <ClInclude Include="src\Debug\Output.h" />
     <ClInclude Include="src\Exceptions\InvalidArgumentException.h" />
     <ClInclude Include="src\Exceptions\NullReferenceException.h" />
     <ClInclude Include="src\Exceptions\OutOfRangeException.h" />
