--- a/UnitTests/UnitTests.vcxproj.filters
+++ b/UnitTests/UnitTests.vcxproj.filters
@@ -2,7 +2,7 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
-    <ClCompile Include="Math\VectorTests.cpp">
+    <ClCompile Include="Math\TypedVectorTests.cpp">
       <Filter>Math</Filter>
     </ClCompile>
   </ItemGroup>
