Added vector2 tests

--- a/UnitTests/UnitTests.vcxproj.filters
+++ b/UnitTests/UnitTests.vcxproj.filters
@@ -5,6 +5,9 @@
     <ClCompile Include="Math\TypedVectorTests.cpp">
       <Filter>Math</Filter>
     </ClCompile>
+    <ClCompile Include="Math\Vector2Tests.cpp">
+      <Filter>Math</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
