--- a/UnitTests/UnitTests.vcxproj
+++ b/UnitTests/UnitTests.vcxproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <ClCompile Include="Math\TypedVectorTests.cpp" />
     <ClCompile Include="Math\Vector2Tests.cpp" />
+    <ClCompile Include="Math\Vector3Tests.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
