Added Vector4 tests

--- a/UnitTests/UnitTests.vcxproj.filters
+++ b/UnitTests/UnitTests.vcxproj.filters
@@ -11,6 +11,9 @@
     <ClCompile Include="Math\Vector3Tests.cpp">
       <Filter>Math</Filter>
     </ClCompile>
+    <ClCompile Include="Math\Vector4Tests.cpp">
+      <Filter>Math</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
